[package]
name = "streamtest-001"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.80"
cpal = "0.15.2"
crossbeam-channel = "0.5.12"
eframe = "0.26.2"
egui_extras = { version = "*", features = ["all_loaders"] }
rfd = "0.14.0"
wav = "1.0.0"
wright_omega = "0.1.1"

